--- a/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/loggers_info.html
+++ b/desafio-pre-entrega-3-FrontEnd-BackEnd/Backend/loggers_info.html
@@ -4,3 +4,4 @@ info: <span style="color:blue">Texto informativo de Info</span><br/>
 error: <span style="color:yellow">Texto Error</span><br/>
 warn: <span style="color:cyan">Texto Warning</span><br/>
 fatal: <span style="color:red">Texto informativo de Info</span><br/>
+info: <span style="color:blue">Texto informativo de Info</span><br/>
